--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <div id="container">
-
+      <div class="rounded"id= "cursor">TONNAM</div>
       <div id="left_container">
         <img id="image_shower"/>
+        <div id="imageLnum"> </div>
       </div>
       <div id="button_containerL">
         <buttonL onclick="randomShuffleL()"> <i class="fas fa-random"></i> </button>
@@ -17,6 +18,7 @@
 
       <div id="right_container">
         <img id="image_landscape"/>
+        <div id="imageRnum"> </div>
       </div>
       <div id="button_containerR">
         <buttonR onclick="randomShuffleR()"> <i class="fas fa-random"></i> </button>
